--- a/tests/templates/ldap/default.yaml
+++ b/tests/templates/ldap/default.yaml
@@ -11,10 +11,8 @@ template:
     nodes:
       - count: 3
         roles: [controller]
-      - count: 2
-        roles: [compute]
       - count: 1
-        roles: [cinder]
+        roles: [compute, cinder]
     release: ubuntu
     settings:
       components:
@@ -102,18 +100,7 @@ template:
         interfaces: *rack-01-slave-interfaces
         memory: 4096
         network_config: *rack-01-slave-network_config
-        vcpu: 4
-        volumes:
-        - {capacity: 55, format: qcow2, name: system}
-        - {capacity: 55, format: qcow2, name: cinder}
-        - {capacity: 55, format: qcow2, name: swift}
-
-      rack-01-storage-node-params: &storage-node-params
-        boot: [network, hd]
-        interfaces: *rack-01-slave-interfaces
-        memory: 2048
-        network_config: *rack-01-slave-network_config
-        vcpu: 1
+        vcpu: 2
         volumes:
         - {capacity: 55, format: qcow2, name: system}
         - {capacity: 55, format: qcow2, name: cinder}
@@ -169,14 +156,8 @@ template:
       - name: slave-04
         params: *compute-node-params
         role: fuel_slave
-      - name: slave-05
-        params: *compute-node-params
-        role: fuel_slave
-      - name: slave-06
-        params: *storage-node-params
-        role: fuel_slave
-  name: 3 Controller, 2 Compute, 1 Cinder, Neutron, VLAN
-  slaves: 6
+  name: 3 Controller, 1 Compute + Cinder, Neutron, VLAN
+  slaves: 4
 
 plugins:
   - ldap:
