--- a/tests/templates/ldap/default_no_ha.yaml
+++ b/tests/templates/ldap/default_no_ha.yaml
@@ -155,4 +155,4 @@ template:
 
 plugins:
   - ldap:
-      config_file: !os_env LDAP_CONFIG_FILE, plugins_config/ldap.yaml
+      config_file: !os_env LDAP_CONFIG_FILE, plugins_config/ldap_mld.yaml
