--- a/tests/templates/ldap/no_ha_db_rabbit_keystone.yaml
+++ b/tests/templates/ldap/no_ha_db_rabbit_keystone.yaml
@@ -13,6 +13,8 @@ template:
         roles: [controller]
       - count: 1
         roles: [compute, cinder]
+      - count: 3
+        roles: [standalone-database, standalone-keystone, standalone-rabbitmq]
     release: ubuntu
     settings:
       components:
@@ -84,18 +86,7 @@ template:
           networks:
            - baremetal
 
-      rack-01-controller-node-params: &controller-node-params
-        boot: [network, hd]
-        interfaces: *rack-01-slave-interfaces
-        memory: 4096
-        network_config: *rack-01-slave-network_config
-        vcpu: 2
-        volumes:
-        - {capacity: 55, format: qcow2, name: system}
-        - {capacity: 55, format: qcow2, name: cinder}
-        - {capacity: 55, format: qcow2, name: swift}
-
-      rack-01-compute-node-params: &compute-node-params
+      rack-01-controller-node-params: &node-params
         boot: [network, hd]
         interfaces: *rack-01-slave-interfaces
         memory: 4096
@@ -145,14 +136,25 @@ template:
           - {bus: ide, device: cdrom, format: raw, name: iso, source_image: !os_env ISO_PATH}
         role: fuel_master
       - name: slave-01
-        params: *controller-node-params
+        params: *node-params
         role: fuel_slave
       - name: slave-02
-        params: *compute-node-params
+        params: *node-params
         role: fuel_slave
-  name: 1 Controller, 1 Compute + Cinder, Neutron, VLAN
-  slaves: 2
+      - name: slave-03
+        params: *node-params
+        role: fuel_slave
+      - name: slave-04
+        params: *node-params
+        role: fuel_slave
+      - name: slave-05
+        params: *node-params
+        role: fuel_slave
+  name: 1 Controller, 1 Compute + Cinder, 3 Standalone, Neutron, VLAN
+  slaves: 5
 
 plugins:
   - ldap:
       config_file: !os_env LDAP_CONFIG_FILE, plugins_config/mld_proxy.yaml
+  - detach-database:
+  - detach-rabbitmq:
